examples/test/testpolicy8858.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8858
  namespace: namespace393
spec:
  podSelector:
    matchLabels:
      key12: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value7
          key40: value7
          key33: value10
      podSelector:
        matchLabels:
          key12: value30
